--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
           user: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           localDir: 'public'
-          remoteDir: 'www/public'
+          remoteDir: 'dev/public'
           options: '--verbose --ascii'
 
       - name: 🚀 FTP server file to host
@@ -48,5 +48,5 @@ jobs:
           user: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           localDir: 'dist'
-          remoteDir: 'www'
+          remoteDir: 'dev/dist'
           options: '--verbose --ascii'
